<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/mechero"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:contentDescription="@string/mechero"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/mechero" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/cadena"
                    android:contentDescription="@string/cadena"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/cadena" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear1"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/pinza"
                    android:contentDescription="@string/pinza"
                    android:layout_width="wrap_content"
                    android:layout_height="275dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/pinza" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear2"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <ImageView
                    android:id="@+id/monedas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/monedas"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/monedas" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/ring"
                    android:contentDescription="@string/ring"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ring" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>